--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,500,500italic,700,700italic,">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
+    <style>
+      body {
+        font-family: Roboto;
+        font-weight: 300;
+        color: rgba(24, 24, 24, 0.8);
+      }
+    </style>
+
+
     <title>WS Products</title>
   </head>
   <body>
