renamed component filename to follow convention. restricted max width to 1024 and center aligned content. added basic css to details page

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
         font-weight: 300;
         color: rgba(24, 24, 24, 0.8);
       }
+
+      a {
+        text-decoration: none;
+        color: inherit;
+      }
     </style>
 
 
